<resources>
    <string name="app_name">Android_Develop_Guide</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="notification">消息通知</string>
    <string name="_default">默认</string>

    <string name="alert">提示</string>
    <string name="confirm_exit">确认退出吗</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="download_install">下载完成，请点击安装</string>

    <string name="_0_0_0">0.0.0</string>
    <string name="some_granted">应用部分功能将无法正常使用</string>
    <string name="exit_app">再按一次将退出程序</string>
    <string name="exit">退出</string>
    <string name="scan_code">扫码识别</string>
    <string name="shortcut_disable_message">shortcut不可用</string>

    <string name="no_data">Ok, 暂无数据.</string>
    <string name="click_to_retry">点击重试!</string>

    <string name="upgrade">升级</string>
    <string name="upgrade_ignore">忽略此版本</string>
    <string name="upgrade_background">后台更新</string>
    <string name="upgrade_new_version">版本更新啦！</string>

    <string name="index">首页</string>
    <string name="category">分类</string>
    <string name="finder">发现</string>
    <string name="about">我的</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录 or 注册</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"登录失败"</string>



    <string name="fragment_login_title">登录</string>
    <string name="fragment_login_sub_title">还没有账户，立即注册</string>
    <string name="or">你也可以用以下登录方式</string>


</resources>