<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_alert_title_height"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/dialog_container_horizontal_spacing"
        android:layout_marginBottom="@dimen/dialog_alert_title_marginBottom"
        android:gravity="bottom"
        android:text="@string/alert"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_sub_title"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_actions_height"
        android:layout_below="@+id/title"
        android:gravity="center_vertical|end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_actions_view_margin"
            android:layout_toStartOf="@id/action_2"
            android:background="@drawable/selector_button_white_lighter"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size_action" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dialog_actions_view_margin"
            android:background="@drawable/selector_button_white_lighter"
            android:text="@string/confirm"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_size_action" />
    </RelativeLayout>
</RelativeLayout>