<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle_radius_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/upgrade_new_version"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="never">

        <TextView
            android:id="@+id/tv_update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            style="@style/AppCompatTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp" />

        <View
            android:id="@+id/split_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_confirm"
            style="@style/AppCompatTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upgrade"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>