<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle_radius_white"
    android:paddingBottom="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_update_logo"
        android:layout_width="@dimen/logo_size_b"
        android:layout_height="@dimen/logo_size_b"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/upgrade_new_version"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_update_logo" />

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/tv_update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"
            tools:text="1、快来升级最新版本\n2、这次更漂亮了\n3、快点来吧" />
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_confirm"
        style="@style/AppCompatTextView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_button_color_primary"
        android:gravity="center"
        android:text="@string/upgrade"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_content"
        app:layout_goneMarginBottom="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_cancel"
        style="@style/AppCompatTextView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
        app:layout_goneMarginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>